[CSS Exclusions] Fix for comment #23 on wrap-shape parsing bug 61726 https://bugs.webkit.org/show_bug.cgi?id=64464

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-07-13
Reviewed by Tony Chang.

No new tests needed.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseWrapShapeRect): Removed the "valid" local.
(WebCore::CSSParser::parseWrapShapeCircle): Removed the "valid" local.
(WebCore::CSSParser::parseWrapShapeEllipse): Removed the "valid" local.
* css/CSSPrimitiveValue.cpp:
* css/CSSWrapShapes.h:
(WebCore::CSSWrapShapePolygon::getXAt): Replaced bit shift with multiplication.
(WebCore::CSSWrapShapePolygon::getYAt): Replaced bit shift with multiplication.
* rendering/style/RenderStyle.cpp:
* rendering/style/StyleRareNonInheritedData.h:

Canonical link: https://commits.webkit.org/80194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90937 268f45cc-cd09-0410-ab3c-d52691b4dbfc